@@ -116,6 +116,7 @@ Collate:
     'geom-rect.r'
     'geom-ribbon-.r'
     'geom-ribbon-density.r'
+    'geom-ribbon-smoke.r'
     'geom-rug.r'
     'geom-segment.r'
     'geom-smooth.r'
@@ -185,6 +186,7 @@ Collate:
     'stat-identity.r'
     'stat-qq.r'
     'stat-quantile.r'
+    'stat-smoke.r'
     'stat-smooth-methods.r'
     'stat-smooth.r'
     'stat-spoke.r'
