@@ -188,6 +188,8 @@ export(GeomRect)
 export(GeomRibbon)
 export(GeomRug)
 export(GeomSegment)
+export(GeomSmoke)
+export(GeomSmoke2)
 export(GeomSmooth)
 export(GeomStep)
 export(GeomText)
@@ -218,6 +220,7 @@ export(StatFunction)
 export(StatIdentity)
 export(StatQq)
 export(StatQuantile)
+export(StatSmoke)
 export(StatSmooth)
 export(StatSpoke)
 export(StatSum)
@@ -319,6 +322,8 @@ export(geom_rect)
 export(geom_ribbon)
 export(geom_rug)
 export(geom_segment)
+export(geom_smoke)
+export(geom_smoke2)
 export(geom_smooth)
 export(geom_step)
 export(geom_text)
@@ -460,6 +465,7 @@ export(stat_function)
 export(stat_identity)
 export(stat_qq)
 export(stat_quantile)
+export(stat_smoke)
 export(stat_smooth)
 export(stat_spoke)
 export(stat_sum)
